[package]
name = "sysdns"
version = "0.1.0"
edition = "2021"
license = "MIT"
eywords = ["system-dns", "dns", "networksetup"]
description = "A library for set/get system dns on macOS."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.8"